--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" type="imagem/x-icon" href="wi-fi-alt.ico"
+    <link rel="icon" type="imagem/x-icon" href="wi-fi-alt.ico">
 </head>
 <body>
     <!-- inicio do Body-->
