Estilização de letras WEB

--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -10,7 +10,7 @@
     <!-- inicio do Body-->
     <p><h3> -- Aula 02 - Desenvolvimento WEB -- </h3></p>
 
-    <p><h3> -- Aula sobre estilização de textos -- </h3></p>
+    <p>Aula sobre estilização de textos, mudança do Favicon, Hyperlink e tabela</p>
 
     <p><b>Texto exemplo em negrito</b></p>
 
@@ -31,5 +31,7 @@
     <p><sub>Texto exemplo em "Subscript Text"</sub></p>
     
     <p><sup>Texto exemplo em "Superscript Text"</sup></p>
+    <br><br>
+    <a href="https://www.google.com/" target="_blank"> <button>Site do Google</button></a>
 </body>
 </html>
