--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -33,5 +33,18 @@
     <p><sup>Texto exemplo em "Superscript Text"</sup></p>
     <br><br>
     <a href="https://www.google.com/" target="_blank"> <button>Site do Google</button></a>
+
+    <br><br>
+    <table border="Spx">
+        <tr>
+            <th Colspan="1">Company</th>
+            <th>Description</th>
+            <th>Contact</th>
+        </tr>
+        <tr>
+            <td>Oficina do toninho</td>
+            <td>Manutenção de Computadores</td>
+            <td>toninho@gmail.com</td>
+    </table>
 </body>
 </html>
