Tags de Texto, tabela, Favicon e Hiperlink

--- a/aula-02/index.html
+++ b/aula-02/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- inicio do Body-->
-    <p><h3> -- Aula 02 - Desenvolvimento WEB -- </h3></p>
+    <h3> -- Aula 02 - Desenvolvimento WEB -- </h3>
 
     <p>Aula sobre estilização de textos, mudança do Favicon, Hyperlink e tabela</p>
 
