--- a/Primeira-pagina-HTML/index.html
+++ b/Primeira-pagina-HTML/index.html
@@ -56,13 +56,21 @@
 
     <br>
     <h4>Onde posso assistir:</h4>
+
+    <img src="futemax.png" height="100px" width="100px">
     <a href="https://futemax.sb/" target="_blank"> <button>FUTEMAX</button></a>
+
+    <img src="nossofut.png" height="100px" width="100px">
     <a href="https://www.nossofutebol.com/" target="_blank"> <button>NOSSOFUTEBOL</button></a>
 
     <br><br>
     <h4>Site notificando sobre jogos:</h4>
-    <a href="https://www.fifa.com/pt" target="_blank"> <button>FUTEMAX</button></a>
-    <a href="https://onefootball.com/pt-br/inicio" target="_blank"> <button>FUTEMAX</button></a>
+    
+    <img src="fifa.png" height="100px" width="100px">
+    <a href="https://www.fifa.com/pt" target="_blank"><button>FIFA</button></a>
+
+    <img src="onefoot.png" height="100px" width="100px">
+    <a href="https://onefootball.com/pt-br/inicio" target="_blank"><button>ONEFOOTBALL</button></a>
 
     <br><br>
     <h3>Variações de diferentes sites esportivos:</h3>
