--- a/aula-09/efeito.html
+++ b/aula-09/efeito.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exemplo Transition</title>
-    <style>
-        .box {
-        width: 100px;
-        height: 100px;
-        background-color: #3498db;
-        transition: background-color 0.5s ease, transform 0.5s ease;
-        }
-        .box:hover {
-        background-color: #2ecc71;
-        transform: scale(1.2);
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Efeitos</title>
 </head>
 <body>
-    <div class="box"></div>
+    
 </body>
 </html>
