--- a/aula-09/border-radius.html
+++ b/aula-09/border-radius.html
@@ -11,6 +11,16 @@
         background-color: #3498db;
         border-radius: 50%;
         }
+        .box {
+        width: 100px;
+        height: 100px;
+        background-color: #3498db;
+        transition: transform 0.5s;
+        }
+        
+        .box:hover {
+        transform: rotate(45deg);
+        }
     </style>
 </head>
 <body>
