--- a/aula-09/ATV1.html
+++ b/aula-09/ATV1.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exemplo Scale</title>
+<title>Atividade das animation</title>
     <style>
         div{
             text-align: center;
         }
-        
+
         body {
             margin: 0;
             display: flex;
