--- a/Javascript/Aula-02/index.html
+++ b/Javascript/Aula-02/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Document</title>
+    <title>Primeiros passos com o DOM!</title>
 </head>
 <body>
     <h1>Primeiro passos com o DOM</h1>
@@ -23,6 +22,18 @@
     <h1>Quarto passos com o DOM</h1>
     <p>Esse é um paragráfo</p>
     <p id="paragrafo">Esse é um outro paragráfo</p>
+
+    <h1>Eventos do DOM</h1>
+    <button onclick="alertaDeClique()">Clique aqui!</button>
+
+    <p>Numero 1:</p>
+    <input type="number" id="numero1">
+    <p>Numero 2:</p>
+    <input type="number" id="numero2">
+    <br>
+    <button onclick="calcular()">Realize o calculo</button>
+    <br>
+    <p id="resulatado"></p>
 
 </body>
 <script src="script.js"></script>
