--- a/Javascript/Aula-02/index.html
+++ b/Javascript/Aula-02/index.html
@@ -33,7 +33,7 @@
     <br>
     <button onclick="calcular()">Realize o calculo</button>
     <br>
-    <p id="resulatado"></p>
+    <p id="resultado"></p>
 
 </body>
 <script src="script.js"></script>
