--- a/Javascript/Lista1DOM/Atv1.html
+++ b/Javascript/Lista1DOM/Atv1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
-    <title>Pagina das Atv - Eventos DOM em JavaScript</title>
+    <title>Lista 1 das Atv - Eventos DOM em HTML e JavaScript</title>
 </head>
 <body>
 <!--Botão informar o nome-->
