Save atividades DOM

--- a/Javascript/Lista1DOM/Atv1.html
+++ b/Javascript/Lista1DOM/Atv1.html
@@ -56,8 +56,8 @@
 
     <script>
         function BoxColor(){
-            const colors = ["blue", "red"];
-            const randomColor = colors[Math.floor(Math.random() * colors.length)];
+            colors = ["blue", "red"];
+            randomColor = colors[Math.floor(Math.random() * colors.length)];
             document.getElementById("colorBox").style.backgroundColor = randomColor;
         }
     </script>
