--- a/Javascript/Lista2DOM/Atv2.html
+++ b/Javascript/Lista2DOM/Atv2.html
@@ -7,6 +7,7 @@
 </head>
     <body>
     <!--Informa se é maior ou menor de idade-->
+
         <h3>Informe o seu idade:</h3>
         <p>Idade:</p>
         <input type="number" id="idade">
@@ -14,7 +15,11 @@
         <h4 id="res"></h4>
         <br>
 
+
+    <h3>-----------------------------------------------------------------------------<br/></h3>
+
     <!--Numero positivo, negativo ou zero-->
+
         <h3>Insira um numero:</h3>
         <p>Numero:</p>
         <input type="number" id="numero1">
@@ -22,7 +27,11 @@
         <h4 id="result"></h4>
         <br>
 
+
+    <h3>-----------------------------------------------------------------------------<br/></h3>
+
     <!--Nome de usuario e senha, se nome for "admin" e senha "12345, exibir boas-vindas, caso não dar erro-->
+
         <h3>Informe seu nome:</h3>
         <p>Nome:</p>
         <input type="text" id="nomeUsuario">
@@ -33,7 +42,11 @@
         <h4 id="resultado"></h4>
         <br>
 
+
+    <h3>-----------------------------------------------------------------------------<br/></h3>
+
     <!--Usuario inserir dois numeros e uma operação-->
+
         <h3>Inserir dois numeros!</h3>
         <p>Digite seu primeiro numero:</p>
         <input type="number" id="priNumero">
@@ -48,6 +61,53 @@
         <button onclick="operacao1()">Calcular</button>
         <h4 id="resul"></h4>
         <br>
+
+
+    <h3>-----------------------------------------------------------------------------<br/></h3>
+
+    <!--Crie um programa que peça ao usuário para inserir um número e informe se é par ou ímpar-->
+
+        <h3>Insira um número para saber se é impar ou par!</h3>
+        <input type="text" id="ImparPar">
+        <button onclick="CalculoImparpar()">Calcular</button>
+        <h4 id="resultadoImparPar"></h4>
+
+
+    <h3>-----------------------------------------------------------------------------<br/></h3>
+
+    <!--Crie um programa que solicite ao usuário três números e informe qual deles é o maior-->
+
+        <h3>Insira três números a seguir para descobrir o maior número!</h3>
+        <p>Digite seu primeiro número:</p>
+        <input type="number" id="PriNumero">
+
+        <p>Digite seu segundo número:</p>
+        <input type="number" id="SegNumero">
+
+        <p>Digite seu terceiro número:</p>
+        <input type="number" id="TerNumero">
+
+        <button onclick="verificarMaior()">Calcular o maior</button>
+
+        <p>Resultado:</p>
+        <h4 id="resultadoMaior"></h4>
+
+    <h3>-----------------------------------------------------------------------------<br/></h3>
+
+    <!--Crie um programa que peça ao usuário inserir os comprimentos de três lados de um triângulo e determine se é um triângulo válido-->
+
+        <h1>Triângulo</h1>
+        <p>Lado1</p>
+        <input type="number" id="lado1">
+        <p>Lado2</p>
+        <input type="number" id="lado2">
+        <p>Lado3</p>
+        <input type="number" id="lado3">
+        <br><br>
+        <button onclick="calculoTri()">Avançar</button>
+        <p>Triângulo é:</p>
+        <h3 id="resultadoTriangulo"></h3>
+        
     </body>
 <script src="script.js"></script>
 </html>
