--- a/Bootstrap/aula-02/Atividade/Desafio01.html
+++ b/Bootstrap/aula-02/Atividade/Desafio01.html
@@ -23,10 +23,6 @@
                 <h5 class="card-title">Canadá</h5>
                 <p class="card-text">O Canadá é um país que encanta pela sua imensidão e beleza natural. Suas paisagens parecem saídas de um cartão-postal: lagos cristalinos, florestas densas, montanhas cobertas de neve e céus que brilham com a aurora boreal. 🍁</p>
                 <a href="#" class="btn btn-primary">Saiba Mais</a>
-                <br><br>
-                <a href="#" class="btn btn-danger w-100">Contato</a>
-                <br><br>
-                <a href="#" class="btn btn-success w-100">Download CV</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -35,10 +31,6 @@
             <h5 class="card-title">Reino Animal</h5>
                 <p class="card-text">O Canadá, com suas paisagens de tirar o fôlego, parece um palco criado pela natureza para receber o grande espetáculo da vida selvagem. Nas florestas e montanhas, cruzam-se alces imponentes, ursos curiosos e águias que rasgam o céu. 🌍</p>
                 <a href="#" class="btn btn-primary">Saiba Mais</a>
-                <br><br>
-                <a href="#" class="btn btn-danger w-100">Contato</a>
-                <br><br>
-                <a href="#" class="btn btn-success w-100">Download CV</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -47,14 +39,15 @@
             <h5 class="card-title">Robôs Inteligentes</h5>
                 <p class="card-text">Gostar de robôs vai muito além de um simples interesse por tecnologia — é, na verdade, uma mistura de imaginação, ciência e emoção. Desde os tempos antigos, a humanidade sonha com máquinas que imitam a vida. 🤖</p>
                 <a href="#" class="btn btn-primary">Saiba Mais</a>
-                <br><br>
-                <a href="#" class="btn btn-danger w-100">Contato</a>
-                <br><br>
-                <a href="#" class="btn btn-success w-100">Download CV</a>
             </div>
         </div>
     </div>
+    <a href="#" class="btn btn-danger w-100">Contato</a>
+    <br>
+    <a href="#" class="btn btn-success w-100">Download CV</a>
+    <br>
 </div>
+<p class="bg-dark text-white text-center p-3">Desenvolvido com Bootstrap - 2025</p>
 
     <script src="js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
